# can2350

./: README.md
src/: CMakeLists.txt  cmake_install.cmake  pico_sdk_import.cmake
src/include/: globals.h  tusb_config.h
src/pico-sdk/: Makefile  cmake_install.cmake
src/pico-sdk/docs/: Makefile  cmake_install.cmake
src/pico-sdk/src/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
src/pico-sdk/src/rp2040/boot_stage2/: Makefile  (+1 more)
src/pico-sdk/tools/: Makefile  cmake_install.cmake
src/src/: main.cpp  rb.c  rb.h  slcan.cpp  slcan.h  usb_callbacks.cpp  usb_descriptors.cpp  xl2515.h  xl2515ext.c
(+155 files in other folders)
